# monorenderer

./: CMakeLists.txt  LICENSE  Makefile  README.md  config.xml  run.sh
shader/rt/: ssq.frag  ssq.vert  whitted.comp
src/: main.cpp
src/renderer/: renderer.cpp  renderer.hpp
src/renderer/rt/: geometrybuffer.cpp  geometrybuffer.hpp  renderer.cpp  renderer.hpp
src/renderer/rt/objects/: box.cpp  box.hpp  custom.cpp  custom.hpp  extern.cpp  extern.hpp  object.cpp  object.hpp  quad.cpp  quad.hpp  triangle.cpp  triangle.hpp
src/renderer/util/: configreader.cpp  configreader.hpp
